# fernq

./: .gitignore  Cargo.toml  README.md  README_CN.md
fernq-core/: Cargo.toml
fernq-core/src/: protocol.rs
fernq-core/src/protocol/: decoder.rs  encoder.rs  error.rs  frame.rs  message.rs  validate.rs
fernqctl/: Cargo.toml
fernqctl/src/: main.rs
fernqd/: Cargo.toml
fernqd/src/: main.rs  server.rs  storage.rs
fernqd/src/server/: conn.rs  node.rs  room.rs
fernqd/src/storage/: db.rs  error.rs  model.rs
fernqd/test/: config.ini
fernqd/test/storage/: 0.jnl
fernqd/test/storage/keyspaces/0/: current  v2
fernqd/test/storage/keyspaces/0/tables/: 0
fernqd/test/storage/keyspaces/1/: current  v0
