[package]
name = "fernqctl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "fernq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
uuid = { version = "1.21.0", features = ["v4","serde"] }
