[package]
name = "fernqd"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
bincode = { version = "2.0", features = ["serde"] }
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
config = "0.15.19"
dashmap = "6.1.0"
fernq-core = { version = "0.1.0", path = "../fernq-core" }
fjall = "3.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4","serde"] }
